# taurobtrackerapi

./: COPYING  README.md
libtaurob/: CMakeLists.txt  package.xml
libtaurob/include/libtaurob_arm/: Arm_frames.h  libtaurob_arm.h
libtaurob/include/libtaurob_base/: Base_frames.h  libtaurob_base.h
libtaurob/include/libtaurob_flipper/: flipper_frames.h  libtaurob_flipper.h
libtaurob/include/libtaurob_tools/: Debug.h  Helper_functions.h  IUdpReceiver.h  IUdpReceiverBinary.h  ParseException.h  SocketTCP.h  SocketUDP.h  SocketUDPBinary.h
libtaurob/src/: Arm.cpp  Arm_frames.cpp  Arm_segment.cpp  Base_frames.cpp  SocketTCP.cpp  SocketUDP.cpp  SocketUDPBinary.cpp  flipper.cpp  flipper_frames.cpp  libtaurob_base.cpp
libtaurob_arm/: CMakeLists.txt  package.xml
libtaurob_arm/include/libtaurob_arm/: Arm_frames.h  libtaurob_arm.h
libtaurob_arm/src/: Arm.cpp  Arm_frames.cpp  Arm_segment.cpp  Flipper.cpp
libtaurob_base/: CMakeLists.txt  build  package.xml
libtaurob_base/include/libtaurob_base/: Base_frames.h  libtaurob_base.h  libtaurob_base.h~
libtaurob_base/src/: Base_frames.cpp  libtaurob_base.cpp  libtaurob_base.cpp~
libtaurob_claw/: CMakeLists.txt  package.xml
libtaurob_claw/include/libtaurob_claw/: Claw_frames.h  libtaurob_claw.h
libtaurob_claw/src/: Claw.cpp  Claw_frames.cpp
libtaurob_flipper/: CMakeLists.txt  package.xml
libtaurob_flipper/include/libtaurob_flipper/: Flipper_frames.h  libtaurob_flipper.h
libtaurob_flipper/src/: Flipper.cpp  Flipper_frames.cpp
libtaurob_tools/: CMakeLists.txt  package.xml
libtaurob_tools/include/libtaurob_tools/: IUdpReceiver.h  ParseException.h  SocketTCP.h  SocketUDPBinary.h
libtaurob_tools/src/: SocketUDPBinary.cpp
taurob_arm_description/: CMakeLists.txt  package.xml
taurob_arm_description/urdf/tracker/: taurob_arm.urdf.xacro.xml  taurob_arm_collision_geoms_simple.urdf.xacro.xml
taurob_arm_node/: CMakeLists.txt  package.xml
taurob_arm_node/config/: default.yaml  tracker.yaml  tracker.yaml.default
taurob_arm_node/launch/: test.launch  test_joint.urdf  tracker.launch
taurob_arm_node/msg/: JointAdditionalCommand.msg  JointAdditionalInfo.msg
taurob_arm_node/src/: taurob_arm_node.cpp
taurob_arm_ros_control/: CMakeLists.txt  package.xml  setcap_cmd
taurob_arm_ros_control/config/: sim.yaml  tracker.yaml
taurob_arm_ros_control/include/taurob_arm_ros_control/: arm_hw_interface.h
taurob_arm_ros_control/launch/: tracker.launch
taurob_arm_ros_control/src/: arm_hw_interface.cpp
taurob_base_node/: CMakeLists.txt  package.xml
taurob_base_node/launch/: sim.launch  smokebot.launch  test.rviz  tracker.launch
taurob_base_node/src/: taurob_base_node.cpp
taurob_bringup/: CMakeLists.txt  package.xml
taurob_bringup/launch/: tracker_bringup.launch
taurob_claw_node/: CMakeLists.txt  package.xml  setcap-command
taurob_claw_node/config/: gripper_joint_trajectory_controller.yaml  joint_state_controller.yaml
taurob_claw_node/launch/: claw.launch
taurob_claw_node/src/: taurob_claw_node.cpp
taurob_commander_switch/: CMakeLists.txt  package.xml
taurob_commander_switch/launch/: smokebot-gui.launch  smokebot.launch
taurob_commander_switch/scripts/: base_frames.py  flipper_frames.py  selectiongui.py  taurob_commander_switch_node.py
taurob_commander_switch/srv/: State.srv
taurob_flipper_node/: CMakeLists.txt  package.xml
taurob_flipper_node/launch/: flipper-sim.launch  flipper.launch  smokebot.launch  tracker.launch
taurob_flipper_node/src/: taurob_flipper_node.cpp
taurob_flipper_ros_control/: CMakeLists.txt  package.xml  setcap-command  setcap_cmd
taurob_flipper_ros_control/config/: taurob_flipper.yaml  taurob_flipper.yaml~  taurob_flipper_sim.yaml  taurob_flipper_sim.yaml~
taurob_flipper_ros_control/launch/: flipper.launch  flipper_sim.launch
taurob_flipper_ros_control/src/: flipper_hw_interface.cpp
taurob_laser_scanner_mount/: CMakeLists.txt  package.xml
taurob_laser_scanner_mount/launch/: front.launch  rear.launch
taurob_laser_scanner_mount/src/: LSMStatusMsgConverter.cpp  laser_scanner_mount.cpp
taurob_leds/: CMakeLists.txt  package.xml
taurob_leds/src/: taurob_leds.cpp
taurob_relay_drop/: CMakeLists.txt  package.xml
taurob_relay_drop/src/: relay_drop.cpp
taurob_relay_drop/srv/: DropRelay.srv
taurob_relay_dropper/: CMakeLists.txt  package.xml
taurob_relay_dropper/launch/: smokebot.launch
taurob_relay_dropper/scripts/: taurob_relay_dropper_node.py
taurob_robot_description/: CMakeLists.txt  package.xml
taurob_robot_description/launch/: load_description.launch  test_description.launch
taurob_robot_description/urdf/tracker/: robot.urdf.xacro  tracker_chassis.urdf.xacro.xml
taurob_robot_gazebo/: README
taurob_robot_gazebo/taurob_robot_gazebo_description/: CMakeLists.txt  package.xml
taurob_robot_gazebo/taurob_robot_gazebo_ros_control/: CMakeLists.txt  package.xml
taurob_teleop_twist_joy/: CMakeLists.txt  package.xml
taurob_teleop_twist_joy/config/: FakePS3.config.yaml  logitechF310.config.yaml  xbox.config.yaml
taurob_teleop_twist_joy/include/teleop_twist_joy/: simple_inverse_kinematics.h
taurob_teleop_twist_joy/launch/: teleop.launch
taurob_teleop_twist_joy/src/: simple_inverse_kinematics.cpp  teleop_twist_joy.cpp
taurob_tracker_description/: CMakeLists.txt  package.xml
taurob_tracker_description/launch/: tracker.launch  tracker_model_rviz.launch  tracker_model_rviz.launch.rviz  tracker_passive.launch  tracker_rviz.launch  tracker_steer.launch
taurob_tracker_description/meshes/: arm-0-model.blend  arm-1-model.blend  arm-2-model.blend  arm-3-model.blend  arm-complete-model.blend
taurob_tracker_description/urdf/: robot.urdf.xacro  tracker.urdf.xacro  tracker_arm.urdf.xacro  tracker_arm_collision_geoms.urdf.xacro  tracker_arm_collision_geoms_simple.urdf.xacro  tracker_chassis.urdf.xacro
taurob_watchdog/: CMakeLists.txt  package.xml
taurob_watchdog/launch/: watchdog.launch
taurob_watchdog/src/: taurob_watchdog_node.cpp
taurob_watchdog_client/: CMakeLists.txt  package.xml
taurob_watchdog_client/src/: taurob_watchdog_client.cpp
(+9 files in other folders)
