<?xml version="1.0"?>
<package>
  <name>libtaurob</name>
  <version>0.0.0</version>
  <description>Low-level functions to talk to the taurob U-ECU.</description>

  <maintainer email="office@taurob.com">taurob GmbH</maintainer>

  <license>3-clause BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_updater</build_depend>

  <run_depend></run_depend>
</package>
