<?xml version="1.0"?>
<package>
  <name>taurob_relay_dropper</name>
  <version>0.1.0</version>
  <description>Node to communicate with the relay dropper of the robot.</description>

  <maintainer email="office@taurob.com">taurob GmbH</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>

