<?xml version="1.0"?>
<package>
  <name>taurob_tracker_description</name>
  <version>0.0.0</version>
  <description>URDF model for the taurob tracker.</description>

  <maintainer email="office@taurob.com">taurob GmbH</maintainer>

  <license>3-clause BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
