<?xml version="1.0"?>
<package>
  <name>taurob_watchdog_client</name>
  <version>0.0.0</version>
  <description>A client for the taurob watchdog node.</description>

  <maintainer email="office@taurob.com">taurob GmbH</maintainer>

  <license>3-clause BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
